# vibe_coding_tdd_exp

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
app/: api.py  main.py
app/domain/: models.py  money.py  settle.py  share.py
app/utils/: errors.py  validation.py
app/web/static/: app.js
app/web/templates/: index.html
tests/: test_money.py  test_settle_e2e.py  test_settle_performance.py  test_settle_unit.py  test_share.py  test_template_paths.py
