[tool.pytest.ini_options]
addopts = "-q"
testpaths = [
  "tests",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
exclude = [".venv", "venv", ".git", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
pretty = true
[project]
name = "trip-splitter"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2.4",
  "jinja2>=3.1",
  "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "httpx>=0.27",
  "ruff>=0.4",
  "black>=24.0",
  "mypy>=1.8",
]
